--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
         <p>Нежната сила на природата в подкрепа на твоето здраве</p>
     </header>
 
-    <div class="container">
+    <div class="container" id="products">
         <h2>Нашите продукти</h2>
         <div class="products">
             <div class="product">
-                <img src="insuresist.jpg" alt="Инсурезист">
+                <img src="images/insuresist.jpg" alt="Инсурезист">
                 <h3>Инсурезист</h3>
                 <p>Подпомага инсулиновата чувствителност.</p>
                 <a href="#" class="button">Поръчай сега</a>
             </div>
             <div class="product">
-                <img src="diabexin.jpg" alt="Диабексин">
+                <img src="images/diabexin.jpg" alt="Диабексин">
                 <h3>Диабексин</h3>
                 <p>За регулиране на кръвната захар.</p>
                 <a href="#" class="button">Поръчай сега</a>
             </div>
             <div class="product">
-                <img src="slimextreme.jpg" alt="Слим Екстрийм">
+                <img src="images/slimextreme.jpg" alt="Слим Екстрийм">
                 <h3>Слим Екстрийм</h3>
                 <p>Подкрепя здравословното отслабване.</p>
                 <a href="#" class="button">Поръчай сега</a>
